--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -11,15 +11,17 @@
 
 <table class="table table-striped table-bordered" [svData]="filteredProducts" 
 #sv="svDataTable" [svRowsOnPage]="5"
-  svSortOrder="asc">
+svSortBy="payload.node_.children_.root_.right.value.value_" svSortOrder="asc" cellspacing="0">
     <thead>
-        <tr>
-            <th class="point" (click)="svSortBy=payload.node_.children_.root_.right.value.value_"><div class="size">
-            <sv-default-sorter  by="payload.node_.children_.root_.right.value.value_">Title</sv-default-sorter>
-        </div></th>
-            <th><div class="size">Price</div></th>
-            <th><div class="size"></div></th>
+         <tr>
+            <th (click)="tes" class="try">
+                <sv-default-sorter #test  by="payload.node_.children_.root_.right.value.value_"> Title </sv-default-sorter>
+        </th>
+    
+            <th>Price</th>
+            <th></th>
         </tr>
+   
     </thead>
     <tbody>
         <tr *ngFor="let product of sv.data">
@@ -30,7 +32,7 @@
     </tbody>
     <tfoot>
         <tr>
-            <td colspan="3">
+            <td colspan="4">
                 <sv-bootstrap-paginator [rowsOnPageSet]="[5, 10, 25]"></sv-bootstrap-paginator>
             </td>
         </tr>
