--- a/src/app/admin/admin-products/admin-products.component.css
+++ b/src/app/admin/admin-products/admin-products.component.css
@@ -1,12 +1,22 @@
  th{
     width:200px;
+    padding-bottom:10px;
     
 }
 
 td{
-    width:200px;
+  width: 200px;
 }
 
 .try{
     cursor: pointer;
+}
+
+.tt > th{
+    width:0;
+    padding:0;
+}
+
+i{
+    float:right;
 }
