--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -8,17 +8,51 @@
     class="form-control"
     placeholder="Search....">
 </p>
+<!--<data-table
+[items]="items"
+[itemCount]="itemCount"
+(reload)="reloadItems($event)">
+   
+    <data-table-column
+    [property]="'payload.node_.children_.root_.right.value.value_'"
+    [header]="'Title'"
+    [sortable]="true"
+    [resizable]="true"
+    >
+
+     
+    </data-table-column>
+    <data-table-column
+    [property]="'payload.node_.children_.root_.value.value_'"
+    [header]="'Price'"
+    [sortable]="true"
+    [resizable]="true"
+    > 
+ <ng-template #dataTableCell let-item="product">
+{{product.payload.node_.children_.root_.value.value_ | 'USD'}}
+ </ng-template>
+ </data-table-column>
+ <data-table-column
+    [property]="'key'"> 
+ <ng-template #dataTableCell let-item="product">
+    <a [routerLink]="['/admin/products', product.key]">Edit</a>
+ </ng-template>
+ </data-table-column>
+</data-table>-->
 
 <table class="table table-striped table-bordered" [svData]="filteredProducts" 
-#sv="svDataTable" [svRowsOnPage]="5"
-svSortBy="payload.node_.children_.root_.right.value.value_" svSortOrder="asc" cellspacing="0">
+#sv="svDataTable" [svRowsOnPage]="10" 
+svSortOrder="asc">
     <thead>
          <tr>
-            <th (click)="tes" class="try">
-                <sv-default-sorter #test  by="payload.node_.children_.root_.right.value.value_"> Title </sv-default-sorter>
-        </th>
-    
-            <th>Price</th>
+            <th data-toggle="tooltip" data-placement="left" title="Click to sort"><sv-default-sorter  by="payload.node_.children_.root_.right.value.value_"> 
+           
+                Title
+        
+    </sv-default-sorter>
+</th>  
+            
+            <th data-toggle="tooltip" data-placement="left" title="Click to sort"><sv-default-sorter  by="payload.node_.children_.root_.value.value_">Price</sv-default-sorter></th>
             <th></th>
         </tr>
    
