--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -3,7 +3,8 @@
         <form #f="ngForm" (ngSubmit)="save(f.value)">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input #title="ngModel" [(ngModel)]="product.title" name="title" id="title" type="text" class="form-control" required>
+                <input #title="ngModel" [(ngModel)]="product.title" 
+                name="title" id="title" type="text" class="form-control" required>
                 <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
                     Title is required.
                 </div>
@@ -14,14 +15,16 @@
                   <div class="input-group-prepend">
                       <span class="input-group-text">$</span>
                   </div>
-                    <input #price="ngModel"  [(ngModel)]="product.price" name="price" id="price" type="number" class="form-control" required [min]="0">
+                    <input #price="ngModel"  [(ngModel)]="product.price" 
+                    name="price" id="price" type="number" class="form-control" required [min]="0">
                     
               </div>
               
           </div>
           <div class="form-group">
               <label for="category">Category</label>
-              <select #category="ngModel" [(ngModel)]="product.category" name="category" id="category" class="form-control" required>
+              <select #category="ngModel" [(ngModel)]="product.category"
+               name="category" id="category" class="form-control" required>
                   <option  value=""></option>
                   <option *ngFor="let category of categories$ | async " [value]="category.payload.key">{{category.payload.node_.children_.root_.value.value_}}</option>
               </select>
@@ -31,7 +34,8 @@
           </div>
           <div class="form-group">
               <label for="imageUrl">Image Url</label>
-              <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" name="imageUrl" id="imageUrl" 
+              <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" 
+              name="imageUrl" id="imageUrl" 
               type="text" class="form-control" required url>
               <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
                   <div *ngIf="imageUrl.errors.required">  Image Url is required.</div>
@@ -43,14 +47,9 @@
           </form>
     </div>
     <div class="col-md-6">
-        <div class="card" style="width: 18rem;">
-            <img [src]="imageUrl.value" class="card-img-top" *ngIf="product.imageUrl">
-            <div class="card-body">
-              <h5 class="card-title">{{product.title}}</h5>
-              <p class="card-text">{{product.price | currency: 'USD'}}</p>
-            </div>
-          </div>
-    </div>
+        <product-card [product]="product" [showActions]="false"></product-card>
+     </div>
+    
 </div>
 
 
