--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -3,7 +3,7 @@
         <form #f="ngForm" (ngSubmit)="save(f.value)">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input #title="ngModel" [(ngModel)]="product.title" 
+                <input #title="ngModel" [(ngModel)]="product.payload.node_.children_.root_.right.value.value_"
                 name="title" id="title" type="text" class="form-control" required>
                 <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
                     Title is required.
@@ -15,15 +15,19 @@
                   <div class="input-group-prepend">
                       <span class="input-group-text">$</span>
                   </div>
-                    <input #price="ngModel"  [(ngModel)]="product.price" 
+                    <input #price="ngModel"  [(ngModel)]="product.payload.node_.children_.root_.value.value_" 
                     name="price" id="price" type="number" class="form-control" required [min]="0">
                     
+              </div>
+              <div *ngIf="price.touched && price.invalid" class="danger alert-danger">
+                 <div *ngIf="price.errors.required">The price is required.</div>
+                 <div *ngIf="price.errors.min">The price should be 0 or higher.</div>
               </div>
               
           </div>
           <div class="form-group">
               <label for="category">Category</label>
-              <select #category="ngModel" [(ngModel)]="product.category"
+              <select #category="ngModel" [(ngModel)]="product.payload.node_.children_.root_.left.left.value.value_"
                name="category" id="category" class="form-control" required>
                   <option  value=""></option>
                   <option *ngFor="let category of categories$ | async " [value]="category.payload.key">{{category.payload.node_.children_.root_.value.value_}}</option>
@@ -34,7 +38,7 @@
           </div>
           <div class="form-group">
               <label for="imageUrl">Image Url</label>
-              <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" 
+              <input #imageUrl="ngModel" [(ngModel)]="product.payload.node_.children_.root_.left.value.value_" 
               name="imageUrl" id="imageUrl" 
               type="text" class="form-control" required url>
               <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
