--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -7,7 +7,9 @@
         <div class="row">
             <ng-container *ngFor="let product of filteredProducts; let i = index">
                 <div class="col">
+                    <div style="width: 18rem;">
                     <product-card [product]="product"></product-card>
+                </div>
                 </div>
                 <div *ngIf="(i + 1) % 2 ===0" class="w-100" ></div>
             </ng-container>
