--- a/src/app/admin/admin-products/admin-products.component.html
+++ b/src/app/admin/admin-products/admin-products.component.html
@@ -15,22 +15,22 @@
 svSortOrder="asc">
     <thead>
          <tr>
-            <th data-toggle="tooltip" data-placement="left" title="Click to sort"><sv-default-sorter  by="payload.node_.children_.root_.right.value.value_"> 
+            <th data-toggle="tooltip" data-placement="left" title="Click to sort"><sv-default-sorter  by="title"> 
            
                 Title
         
     </sv-default-sorter>
 </th>  
             
-            <th data-toggle="tooltip" data-placement="left" title="Click to sort"><sv-default-sorter  by="payload.node_.children_.root_.value.value_">Price</sv-default-sorter></th>
+            <th data-toggle="tooltip" data-placement="left" title="Click to sort"><sv-default-sorter  by="price">Price</sv-default-sorter></th>
             <th></th>
         </tr>
    
     </thead>
     <tbody>
         <tr *ngFor="let product of sv.data">
-            <td>{{product.payload.node_.children_.root_.right.value.value_}}</td>
-            <td>{{product.payload.node_.children_.root_.value.value_}}</td>
+            <td>{{product.title}}</td>
+            <td>{{product.price}}</td>
             <td><a [routerLink]="['/admin/products', product.key]">Edit</a></td>
         </tr>
     </tbody>
