--- a/src/app/admin/product-form/product-form.component.html
+++ b/src/app/admin/product-form/product-form.component.html
@@ -3,7 +3,7 @@
         <form #f="ngForm" (ngSubmit)="save(f.value)">
             <div class="form-group">
                 <label for="title">Title</label>
-                <input #title="ngModel" [(ngModel)]="product.payload.node_.children_.root_.right.value.value_"
+                <input #title="ngModel" [(ngModel)]="product.title"
                 name="title" id="title" type="text" class="form-control" required>
                 <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
                     Title is required.
@@ -15,7 +15,7 @@
                   <div class="input-group-prepend">
                       <span class="input-group-text">$</span>
                   </div>
-                    <input #price="ngModel"  [(ngModel)]="product.payload.node_.children_.root_.value.value_" 
+                    <input #price="ngModel"  [(ngModel)]="product.price" 
                     name="price" id="price" type="number" class="form-control" required [min]="0">
                     
               </div>
@@ -27,10 +27,12 @@
           </div>
           <div class="form-group">
               <label for="category">Category</label>
-              <select #category="ngModel" [(ngModel)]="product.payload.node_.children_.root_.left.left.value.value_"
+              <select #category="ngModel" [(ngModel)]="product.category"
                name="category" id="category" class="form-control" required>
                   <option  value=""></option>
-                  <option *ngFor="let category of categories$ | async " [value]="category.payload.key">{{category.payload.node_.children_.root_.value.value_}}</option>
+                  <option *ngFor="let category of categories$ | async " [value]="category.key">
+                      <span *ngIf="category.payload.exportVal() as category"> {{category.name}}</span>
+                     </option>
               </select>
               <div *ngIf="category.touched && category.invalid" class="alert alert-danger">
                   Category is required.
@@ -38,7 +40,7 @@
           </div>
           <div class="form-group">
               <label for="imageUrl">Image Url</label>
-              <input #imageUrl="ngModel" [(ngModel)]="product.payload.node_.children_.root_.left.value.value_" 
+              <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" 
               name="imageUrl" id="imageUrl" 
               type="text" class="form-control" required url>
               <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
