--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -8,7 +8,7 @@
             <ng-container *ngFor="let product of filteredProducts; let i = index">
                 <div class="col">
                     <div style="width: 18rem;">
-                    <product-card [product]="product"></product-card>
+                    <product-card [product]="product" [shopping-cart]="cart"></product-card>
                 </div>
                 </div>
                 <div *ngIf="(i + 1) % 2 ===0" class="w-100" ></div>
