--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -10,15 +10,26 @@
          <tr>
              <th>Product</th>
              <th>Quantity</th>
-             <th></th>
+             <th>Price</th>
          </tr>
      </thead>
      <tbody>
          <tr *ngFor="let item of cart.items">
-             <td> {{item.product.title}} </td>
-             <td>{{item.quantity}}</td>
-             <td>{{item.totalPrice}}</td>
+             
+                <td *ngIf="item.quantity !=0"> {{item.product.title}} </td>
+                <td *ngIf="item.quantity !=0" >{{item.quantity}}</td>
+                <td *ngIf="item.quantity !=0">{{item.totalPrice | currency: 'USD'}}</td>
+            
+             
          </tr>
      </tbody>
+     <tfoot>
+        <tr>
+            <th></th>
+            <th></th>
+            <th>{{cart.totalPrice | currency: 'USD'}}</th>
+        </tr>
+    </tfoot>
  </table>
+ 
 </ng-container>
