--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -16,9 +16,12 @@
      <tbody>
          <tr *ngFor="let item of cart.items">
              
-                <td *ngIf="item.quantity !=0"> {{item.product.title}} </td>
-                <td *ngIf="item.quantity !=0" >{{item.quantity}}</td>
-                <td *ngIf="item.quantity !=0">{{item.totalPrice | currency: 'USD'}}</td>
+                <td> {{item.product.title}} </td>
+                <td>
+                    <product-quantity [product]="item.product" [shopping-cart]="cart"></product-quantity>
+
+                </td>
+                <td>{{item.totalPrice | currency: 'USD'}}</td>
             
              
          </tr>
