--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -34,5 +34,12 @@
         </tr>
     </tfoot>
  </table>
- 
-</ng-container>
+ <button 
+ (click)="clearCart()"
+ class="btn btn-danger btn-sm">Clear Shopping Cart
+ </button>
+ </ng-container>
+
+
+
+
