--- a/src/app/shopping-cart/shopping-cart.component.html
+++ b/src/app/shopping-cart/shopping-cart.component.html
@@ -1,6 +1,6 @@
 <h1>Shopping Cart</h1>
 
-<ng-container *ngIf="cart$ | async as cart">
+<div class="row col-10" *ngIf="cart$ | async as cart">
  <p>
      You have {{cart.totalItemsCount}} items in your shopping cart.
  </p>
@@ -8,20 +8,23 @@
  <table class="table">
      <thead>
          <tr>
+             <th></th>
              <th>Product</th>
-             <th>Quantity</th>
-             <th>Price</th>
+             <th class="quantitywidth text-center">Quantity</th>
+             <th class="pricewidth text-right">Price</th>
          </tr>
      </thead>
      <tbody>
          <tr *ngFor="let item of cart.items">
-             
+                 <td>
+                     <div [style.backgroundImage]="'url(' + item.imageUrl + ')'" class="thumbnail"></div>
+                </td>
                 <td> {{item.title}} </td>
                 <td>
                     <product-quantity [product]="item" [shopping-cart]="cart"></product-quantity>
 
                 </td>
-                <td>{{item.totalPrice | currency: 'USD'}}</td>
+                <td class="text-right">{{item.totalPrice | currency: 'USD'}}</td>
             
              
          </tr>
@@ -30,7 +33,8 @@
         <tr>
             <th></th>
             <th></th>
-            <th>{{cart.totalPrice | currency: 'USD'}}</th>
+            <th></th>
+            <th class="text-right">{{cart.totalPrice | currency: 'USD'}}</th>
         </tr>
     </tfoot>
  </table>
@@ -38,7 +42,7 @@
  (click)="clearCart()"
  class="btn btn-danger btn-sm">Clear Shopping Cart
  </button>
- </ng-container>
+ </div>
 
 
 
