--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -4,7 +4,7 @@
       <product-filter [category]="category"></product-filter>
     </div>
     <div class="col">
-        <div class="row">
+        <div class="row" *ngIf="cart$ | async as cart">
             <ng-container *ngFor="let product of filteredProducts; let i = index">
                 <div class="col">
                     <div style="width: 18rem;">
