--- a/src/app/check-out/check-out.component.html
+++ b/src/app/check-out/check-out.component.html
@@ -1,6 +1,8 @@
 
 <h2>Shipping</h2>
-<form #f="ngForm">
+<div>
+  <div class="col-6">
+    <form #f="ngForm">
   <div class="form-group">
     <label for="">Name</label>
     <input #name="ngModel" name="name" [(ngModel)]="shipping.name" type="text" class="form-control" required>
@@ -33,3 +35,8 @@
     (click)="placeOrder()"
     class="btn btn-primary">Place Order</button>
 </form>
+  </div>
+<div class="col-6"></div>
+
+</div>
+
