--- a/src/app/core/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light bg-light fixed-top">
-    <a class="navbar-brand" routerLink="/">E</a>
+  <div class="container">
+    <a class="navbar-brand" routerLink="/"><i class="fas fa-shopping-basket"></i></a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" 
     data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" 
@@ -15,13 +16,19 @@
 
         <li class="nav-item">
           <a class="nav-link" routerLink="/shopping-cart">
-            Shopping Cart
+            <i class="fas fa-shopping-cart"></i>
             <span class="badge badge-warning badge-pill" *ngIf="cart$ | async as cart">
               {{cart.totalItemsCount}}
             </span>
           </a>
         </li>
-        <ng-template #anonymousUser>
+     
+        
+
+       
+      </ul>
+      <ul class="navbar-nav">
+         <ng-template #anonymousUser>
           <li class="nav-item">
             <a class="nav-link" routerLink="/login">Login</a>
           </li>
@@ -41,7 +48,9 @@
           </div>
         </li>
       </ul>
-
       
     </div>
+
+  </div>
+   
   </nav>
