--- a/src/app/shared/components/product-card/product-card.component.css
+++ b/src/app/shared/components/product-card/product-card.component.css
@@ -1,7 +1,25 @@
-.card-footer{
+/*.card-footer{
     padding:0;
 }
 
 .card{
     margin-bottom: 30px;
-}
+}*/
+
+.card { 
+    margin-bottom: 30px;
+  }
+  
+  .card-img-top { 
+    height: 200px;
+  }
+  
+  .card-footer {
+    padding: 0;
+    background: #fff;
+  }
+  
+  .card-footer button {
+    cursor: pointer;
+    
+  }
