--- a/src/app/admin/components/admin-orders/admin-orders.component.html
+++ b/src/app/admin/components/admin-orders/admin-orders.component.html
@@ -1,18 +1,22 @@
-<table class="table">
-    <thead>
-        <tr>
-            <th>Customer</th>
-            <th>Date</th>
-            <th></th>
+<div class="container">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>Customer</th>
+                <th>Date</th>
+                <th></th>
+            </tr>
+        </thead>
+        <tbody>
+         <tr *ngFor="let order of orders">
+            <td>{{order.shipping.name}}</td>
+            <td>{{order.datePlaced | date: 'longDate'}}</td>
+            <td><a href="#">View</a></td>
         </tr>
-    </thead>
-    <tbody>
-     <tr *ngFor="let order of orders">
-        <td>{{order.shipping.name}}</td>
-        <td>{{order.datePlaced | date: 'longDate'}}</td>
-        <td><a href="#">View</a></td>
-    </tr>
-    </tbody>
+        </tbody>
+            
         
-    
-</table>
+    </table>
+</div>
+
+
