--- a/src/app/admin/components/admin-products/admin-products.component.html
+++ b/src/app/admin/components/admin-products/admin-products.component.html
@@ -1,5 +1,5 @@
-
-<p><a routerLink="/admin/products/new" class="btn btn-primary">New Product</a></p>
+<div class="container">
+    <p><a routerLink="/admin/products/new" class="btn btn-primary">New Product</a></p>
 <p>
     <input
     #query
@@ -42,3 +42,4 @@ svSortOrder="asc">
         </tr>
         </tfoot>
 </table>
+</div>
