--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 <bs-navbar></bs-navbar>
 
-<main role="main" class="container">
 
-  <router-outlet></router-outlet>
-</main><!-- /.container -->
+<router-outlet></router-outlet>
+<!--<main role="main" class="container">
+
+ 
+</main>--><!-- /.container -->
