--- a/src/app/shoppingcart/components/shopping-cart/shopping-cart.component.html
+++ b/src/app/shoppingcart/components/shopping-cart/shopping-cart.component.html
@@ -49,8 +49,8 @@
  class="btn btn-primary"
  >Check Out</a>
  </div>-->
-
- <h1>Shopping Cart</h1>
+<div class="container">
+  <h1>Shopping Cart</h1>
  <div class="card" *ngIf="cart$ | async as cart" style="width: 80%;">
    <div class="card-body">
      <p>
@@ -101,5 +101,7 @@
      </tfoot>
    </table>
  </div>
+</div>
+ 
 
 
