--- a/src/app/admin/components/product-form/product-form.component.html
+++ b/src/app/admin/components/product-form/product-form.component.html
@@ -1,61 +1,65 @@
-<div class="row">
-    <div class="col-md-6">
-        <form #f="ngForm" (ngSubmit)="save(f.value)">
-            <div class="form-group">
-                <label for="title">Title</label>
-                <input #title="ngModel" [(ngModel)]="product.title"
-                name="title" id="title" type="text" class="form-control" required>
-                <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
-                    Title is required.
-                </div>
-           </div>
-           <div class="form-group">
-              <label for="price">Price</label>
-              <div class="input-group mb-3">
-                  <div class="input-group-prepend">
-                      <span class="input-group-text">$</span>
+
+<div class="container">
+    <div class="row">
+        <div class="col-md-6">
+            <form #f="ngForm" (ngSubmit)="save(f.value)">
+                <div class="form-group">
+                    <label for="title">Title</label>
+                    <input #title="ngModel" [(ngModel)]="product.title"
+                    name="title" id="title" type="text" class="form-control" required>
+                    <div *ngIf="title.touched && title.invalid" class="alert alert-danger">
+                        Title is required.
+                    </div>
+               </div>
+               <div class="form-group">
+                  <label for="price">Price</label>
+                  <div class="input-group mb-3">
+                      <div class="input-group-prepend">
+                          <span class="input-group-text">$</span>
+                      </div>
+                        <input #price="ngModel"  [(ngModel)]="product.price" 
+                        name="price" id="price" type="number" class="form-control" required [min]="0">
+                        
                   </div>
-                    <input #price="ngModel"  [(ngModel)]="product.price" 
-                    name="price" id="price" type="number" class="form-control" required [min]="0">
-                    
+                  <div *ngIf="price.touched && price.invalid" class="danger alert-danger">
+                     <div *ngIf="price.errors.required">The price is required.</div>
+                     <div *ngIf="price.errors.min">The price should be 0 or higher.</div>
+                  </div>
+                  
               </div>
-              <div *ngIf="price.touched && price.invalid" class="danger alert-danger">
-                 <div *ngIf="price.errors.required">The price is required.</div>
-                 <div *ngIf="price.errors.min">The price should be 0 or higher.</div>
+              <div class="form-group">
+                  <label for="category">Category</label>
+                  <select #category="ngModel" [(ngModel)]="product.category"
+                   name="category" id="category" class="form-control" required>
+                      <option  value=""></option>
+                      <option *ngFor="let category of categories$ | async " [value]="category.key">
+                          <span *ngIf="category.payload.exportVal() as category"> {{category.name}}</span>
+                         </option>
+                  </select>
+                  <div *ngIf="category.touched && category.invalid" class="alert alert-danger">
+                      Category is required.
+                  </div>
               </div>
-              
-          </div>
-          <div class="form-group">
-              <label for="category">Category</label>
-              <select #category="ngModel" [(ngModel)]="product.category"
-               name="category" id="category" class="form-control" required>
-                  <option  value=""></option>
-                  <option *ngFor="let category of categories$ | async " [value]="category.key">
-                      <span *ngIf="category.payload.exportVal() as category"> {{category.name}}</span>
-                     </option>
-              </select>
-              <div *ngIf="category.touched && category.invalid" class="alert alert-danger">
-                  Category is required.
+              <div class="form-group">
+                  <label for="imageUrl">Image Url</label>
+                  <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" 
+                  name="imageUrl" id="imageUrl" 
+                  type="text" class="form-control" required url>
+                  <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
+                      <div *ngIf="imageUrl.errors.required">  Image Url is required.</div>
+                      <div *ngIf="imageUrl.errors.url"> Please enter a valid Url.</div>
+                  </div>
               </div>
-          </div>
-          <div class="form-group">
-              <label for="imageUrl">Image Url</label>
-              <input #imageUrl="ngModel" [(ngModel)]="product.imageUrl" 
-              name="imageUrl" id="imageUrl" 
-              type="text" class="form-control" required url>
-              <div *ngIf="imageUrl.touched && imageUrl.invalid" class="alert alert-danger">
-                  <div *ngIf="imageUrl.errors.required">  Image Url is required.</div>
-                  <div *ngIf="imageUrl.errors.url"> Please enter a valid Url.</div>
-              </div>
-          </div>
-          <button class="btn btn-primary">Save</button> &nbsp;
-          <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
-          </form>
+              <button class="btn btn-primary">Save</button> &nbsp;
+              <button type="button" (click)="delete()" class="btn btn-danger">Delete</button>
+              </form>
+        </div>
+        <div class="col-md-6">
+            <product-card [product]="product" [showActions]="false"></product-card>
+         </div>
+        
     </div>
-    <div class="col-md-6">
-        <product-card [product]="product" [showActions]="false"></product-card>
-     </div>
-    
 </div>
+
 
 
