--- a/src/app/shoppingcart/components/check-out/check-out.component.html
+++ b/src/app/shoppingcart/components/check-out/check-out.component.html
@@ -1,5 +1,5 @@
-
-<h2>Shipping</h2>
+<div class="container">
+  <h2>Shipping</h2>
 <div class="row" *ngIf="cart$ | async as cart">
   <div class="col-6">
  <shipping-form [cart]="cart"></shipping-form>
@@ -8,5 +8,7 @@
   <shopping-cart-summary [cart]="cart"></shopping-cart-summary>
 </div>
 </div>
+</div>
+
 
 
