creation of card for order detail and values testing

--- a/src/app/shoppingcart/components/order-details/order-details.component.html
+++ b/src/app/shoppingcart/components/order-details/order-details.component.html
@@ -1,1 +1,13 @@
-<p>order-details works!</p>
+<div class="card" style="width: 18rem;">
+    <div class="card-body">
+      <h4 class="card-title">Order Detail</h4>
+     
+      <p class="card-text">
+          <span class="bold">Customer:</span>&nbsp;
+            <span>{{order.name}}</span>
+          
+      </p>
+      <a href="#" class="card-link">Card link</a>
+      <a href="#" class="card-link">Another link</a>
+    </div>
+  </div>
