--- a/src/app/shoppingcart/components/order-success/order-success.component.html
+++ b/src/app/shoppingcart/components/order-success/order-success.component.html
@@ -7,7 +7,7 @@
      routerLink="/products"
      >Go to home page.</a> &nbsp;
      <a 
-     [routerLink]="['/order/detail',id]"
+     [routerLink]="['/order-detail',id]"
      >View order details.</a>
     </div>
   </div>
