--- a/src/app/shoppingcart/components/order-details/order-details.component.css
+++ b/src/app/shoppingcart/components/order-details/order-details.component.css
@@ -1,3 +1,17 @@
 .bold{
     font-weight: bold;
 }
+
+.card{
+    border-color: #c1d62e;
+}
+
+.letter{
+    font-size: 16px;
+    font-weight: bold;
+}
+
+ul li {
+    list-style-type: square;
+}
+
