--- a/src/app/shoppingcart/components/order-details/order-details.component.html
+++ b/src/app/shoppingcart/components/order-details/order-details.component.html
@@ -1,17 +1,58 @@
-<div class="card" style="width: 18rem;">
+<div class="card">
     <div class="card-body">
-      <h4 class="card-title">Order Detail</h4>
+      <h4 class="card-title bold">Order Details</h4><hr>
      
       <div class="card-text">
-          <span class="bold">Customer:</span>&nbsp;
-          <span *ngIf="order.shipping as shipping">{{shipping.name}}</span><br/>
-            <span>{{order.datePlaced | date:'longDate'}}</span><br/>
+        
+          <span class="letter">Customer:</span>&nbsp;
+          <span *ngIf="order.shipping as shipping">{{shipping.name}}</span><br/><br>
+          <span class="letter">Date Placed:</span>&nbsp;
+            <span>{{order.datePlaced | date:'medium'}}</span><br/><br/>
+         
+       
 
-            <ul>
-              <li *ngFor="let item of order.orderItems">
-                <span *ngIf="item.product as product">{{product.title}}</span>
-              </li>
-            </ul>
+            <div>
+              <h5 class="letter">Products:</h5><hr>
+              <!--<ul>
+                <li *ngFor="let item of order.orderItems" class="list-group-item-action ">
+                  <span  *ngIf="item.product as product">{{product.title}} x {{item.quantity}}</span>
+
+                  <span class="float-right" *ngIf="item.product as product">{{item.totalPrice}}</span>
+                </li>
+              </ul>-->
+              <table class="table table-borderless">
+                <thead>
+                  <tr>
+                    <th>Description</th>
+                    <th>Quantity</th>
+                    <th>Price</th>
+                    <th>Total Price</th>
+                  </tr>
+                  </thead>
+                    <tbody>
+                      <tr *ngFor="let item of order.orderItems">
+                        <td *ngIf="item.product as product">{{product.title}}</td>
+                        <td>{{item.quantity}}</td>
+                        <td *ngIf="item.product as product">{{product.price}}</td>
+                        <th>{{item.totalPrice}}</th>
+                      </tr>
+                    </tbody>
+                  
+                
+              </table><hr>
+
+
+              <h5 class="letter">Shipping Information:</h5><hr>
+              <div *ngIf="order.shipping as shipping">
+                <span>{{shipping.name}}</span><br/>
+                <span>{{shipping.addressLine1}},{{shipping.addressLine1}},{{shipping.city}}</span>
+
+              </div>
+        
+
+             
+             
+            </div>
        
             
       </div>
