--- a/src/app/shoppingcart/components/order-details/order-details.component.html
+++ b/src/app/shoppingcart/components/order-details/order-details.component.html
@@ -37,6 +37,15 @@
                         <th>{{item.totalPrice}}</th>
                       </tr>
                     </tbody>
+                    
+                    <tfoot>
+                       <tr>
+                         <th>Total</th>
+                         <th></th>
+                         <th></th>
+                         <th>{{order.totalPrice}}</th>
+                       </tr>
+                    </tfoot>
                   
                 
               </table><hr>
@@ -45,7 +54,9 @@
               <h5 class="letter">Shipping Information:</h5><hr>
               <div *ngIf="order.shipping as shipping">
                 <span>{{shipping.name}}</span><br/>
-                <span>{{shipping.addressLine1}},{{shipping.addressLine1}},{{shipping.city}}</span>
+                <span>{{shipping.addressLine1}}, </span><br/>
+                <span>{{shipping.addressLine2}},</span><br/>
+                <span>{{shipping.city}}.</span>
 
               </div>
         
@@ -56,10 +67,10 @@
        
             
       </div>
-           
+      <br/>
           
     
-      <a href="#" class="card-link">Card link</a>
-      <a href="#" class="card-link">Another link</a>
+      <a routerLink="/products" class="card-link">Go to home page.</a>
+    
     </div>
   </div>
