creation of showorders component

--- a/src/app/admin/components/admin-orders/admin-orders.component.html
+++ b/src/app/admin/components/admin-orders/admin-orders.component.html
@@ -1,4 +1,4 @@
-<table class="table">
+<!--<table class="table">
     <thead>
         <tr>
             <th>Customer</th>
@@ -15,4 +15,6 @@
     </tbody>
         
     
-</table>
+</table>-->
+
+<show-orders [orders]="orders" [keys]="keys"></show-orders>
