--- a/src/app/shoppingcart/components/my-orders/my-orders.component.html
+++ b/src/app/shoppingcart/components/my-orders/my-orders.component.html
@@ -1,5 +1,5 @@
 
-<table class="table">
+<!--<table class="table">
     <thead>
         <tr>
             <th>Customer</th>
@@ -16,4 +16,6 @@
     </tbody>
         
     
-</table>
+</table>-->
+
+<show-orders [orders]="orders" [keys]="keys"></show-orders>
