working on some guards

--- a/src/app/shoppingcart/components/my-orders/my-orders.component.html
+++ b/src/app/shoppingcart/components/my-orders/my-orders.component.html
@@ -18,4 +18,4 @@
     
 </table>-->
 
-<show-orders [orders]="orders" [keys]="keys"></show-orders>
+<show-orders [orders]="orders" [keys]="keys" [url]="url"></show-orders>
