rendering paypal buttoms and creating paypal objects

--- a/src/app/paypal-checkout/paypal-checkout.component.html
+++ b/src/app/paypal-checkout/paypal-checkout.component.html
@@ -1,5 +1,5 @@
 <div *ngIf="!paidFor">
-    <h1>By this Red Hawk Cheese -${{product.price}}</h1>
+    <h1>Buy this Red Hawk Cheese -${{product.price}}</h1>
     <p>{{product.description}}</p>
 
     <img width="400" [src]="product.img">
