adding  payment modal component

--- a/src/app/shoppingcart/components/check-out/check-out.component.html
+++ b/src/app/shoppingcart/components/check-out/check-out.component.html
@@ -6,6 +6,11 @@
   </div>
 <div class="col-6">
   <shopping-cart-summary [cart]="cart"></shopping-cart-summary>
+  <div>
+    <br/>
+    <payment-method-modal></payment-method-modal>
+  </div>
+ 
 </div>
 </div>
 
