The paypal confirmation message was changed

--- a/src/app/shoppingcart/components/paypal-checkout/paypal-checkout.component.html
+++ b/src/app/shoppingcart/components/paypal-checkout/paypal-checkout.component.html
@@ -8,7 +8,7 @@
           
         <div *ngIf="paidFor">
         
-            <h1>Yay, you bougth a sweet couch!</h1>
+            <h1>Your order was sucessfully placed!!!</h1>
         
         </div>
 
