--- a/src/app/shoppingcart/components/products/products.component.html
+++ b/src/app/shoppingcart/components/products/products.component.html
@@ -1,12 +1,19 @@
 
+<div>
+    <products-slide></products-slide>
+  </div>
 <div class="row">
+   
     <div class="col-3">
       <product-filter [category]="category"></product-filter>
     </div>
     <div class="col">
         <div class="row" *ngIf="cart$ | async as cart">
+            
             <ng-container *ngFor="let product of filteredProducts; let i = index">
+
                 <div class="col">
+                   
                     <div style="width: 18rem;">
                     <product-card [product]="product" [shopping-cart]="cart"></product-card>
                 </div>
