working on the slide

--- a/src/app/core/components/bs-navbar/bs-navbar.component.html
+++ b/src/app/core/components/bs-navbar/bs-navbar.component.html
@@ -43,6 +43,7 @@
             <ng-container *ngIf="appUser.isAdmin">
               <a class="dropdown-item" routerLink="/admin/orders">Manage Orders</a>
               <a class="dropdown-item" routerLink="admin/products">Manage Products</a>
+              <a class="dropdown-item" routerLink="admin/slide-content">Manage Slide Content</a>
             </ng-container>
             <a class="dropdown-item logout" (click)="logout()">Logout</a>
           </div>
