--- a/src/app/shared/components/products-slide/products-slide.component.html
+++ b/src/app/shared/components/products-slide/products-slide.component.html
@@ -3,11 +3,11 @@
   <ngb-carousel #carousel interval="5000" [pauseOnHover]="pauseOnHover" (slide)="onSlide($event)">
     <ng-template ngbSlide *ngFor="let img of images; index as i">
       <div class="carousel-caption">
-        <h3 *ngIf="img">{{img.description}}</h3>
+       <!--<h3 *ngIf="img">{{img.description}}</h3>--> 
       </div>
       <a href="https://www.google.fr/?q=Number+{{i+1}}" target="_blank" rel="nofollow noopener noreferrer">
         <div class="picsum-img-wrapper">
-        
+           <div class="signboard">ON OFFER</div>
           <img [src]="img.imageUrl" alt="My image {{i + 1}} description" width="100%" height="300px">
         </div>
       </a>
