mixing the types of orders

--- a/src/app/shared/show-orders/show-orders.component.html
+++ b/src/app/shared/show-orders/show-orders.component.html
@@ -10,7 +10,7 @@ svSortOrder="asc">
     </thead>
     <tbody>
         <tr *ngFor="let order of sv.data; index as i">
-            <td>{{order.shipping.name}}</td>
+            <td *ngIf="order.shipping as shipping">{{shipping.name}}</td>
             <td>{{order.datePlaced | date:'longDate'}}</td>
             <td><a [routerLink]="['/order-detail',source,order.key]">View Details</a></td>
         </tr>
