integrating paypal orders in my orders and manage orders

--- a/src/app/shoppingcart/components/order-details/order-details.component.html
+++ b/src/app/shoppingcart/components/order-details/order-details.component.html
@@ -65,6 +65,7 @@
                   <span>{{address.address_line_1}}, </span><br/>
                   <span>{{address.admin_area_2}},</span><br/>
                   <span>{{address.admin_area_1}}.</span>
+                  <span>{{order.paypalOrderId}}</span>
                 </div>
                 
 
