--- a/src/app/shoppingcart/components/paypal-checkout/paypal-checkout.component.html
+++ b/src/app/shoppingcart/components/paypal-checkout/paypal-checkout.component.html
@@ -1,26 +1,29 @@
-<div class="row">
-    <div class="col-6">
+<div>
+    
 
       
         <div *ngIf="!paidFor">
             <shopping-cart-summary *ngIf="shoppingCart" [cart]="shoppingCart"></shopping-cart-summary>
         </div>
           
-        <div *ngIf="paidFor">
-        
-            <h1>Your order was sucessfully placed!!!</h1>
-        
-        </div>
+      
 
     </div>
-    <div class="col-6">
+  
        
-        
+<div>
             
         
-        <div #paypal></div>
-
+    <br/>
+    <div class="row">
+        <div class="col-3">
+            <div #paypal></div>
+        </div>
+      
     </div>
+        
+
+  
 </div>
 
 
