--- a/src/app/shoppingcart/components/products/products.component.html
+++ b/src/app/shoppingcart/components/products/products.component.html
@@ -1,6 +1,8 @@
 
 <div>
-    <products-slide></products-slide>
+   <!--<products-slide></products-slide>-->
+    <carousel-holder-component></carousel-holder-component>
+    <br/>
   </div>
 <div class="row">
    
