--- a/src/app/shared/components/products-slide/products-slide.component.html
+++ b/src/app/shared/components/products-slide/products-slide.component.html
@@ -1,9 +1,9 @@
 
-<div class="sticky-top">
+<!--<div class="sticky-top">
   <ngb-carousel #carousel interval="5000" [pauseOnHover]="pauseOnHover" (slide)="onSlide($event)">
     <ng-template ngbSlide *ngFor="let img of images; index as i">
       <div class="carousel-caption">
-       <!--<h3 *ngIf="img">{{img.description}}</h3>--> 
+      <h3 *ngIf="img">{{img.description}}</h3>
       </div>
       <a href="https://www.google.fr/?q=Number+{{i+1}}" target="_blank" rel="nofollow noopener noreferrer">
         <div class="picsum-img-wrapper">
@@ -15,7 +15,8 @@
   </ngb-carousel>
   
   <hr>
-</div>
+</div>-->
+
 
   
  
