--- a/src/app/shared/components/carousel-holder/carousel-holder-component.html
+++ b/src/app/shared/components/carousel-holder/carousel-holder-component.html
@@ -6,27 +6,13 @@
    <ng-template *ngFor="let image of images" carouselSlide>
    
 
-      
-      <div class="card custommize mb-3" style="max-width: 100%; height:250px">
-        <div class="row no-gutters">
-          <div class="col-md-5">
-            <!--<img [src]="image.imageUrl" class="card-img" height="250px" alt="...">-->
-           
-          </div>
-          <div class="col-md-7">
-        <div class="card custommize text-white">
-          <!--<img src="https://p1.pxfuel.com/preview/179/455/581/gladiolus-flower-blossom-nature.jpg" width="25rem" height="250px" class="card-img" alt="...">-->
-          <div class="card-img-overlay">
-            <h5 class="card-title">{{image.description}}</h5>
-            <p class="card-text">{{image.details}}</p>
-            <!--<p class="card-text">Last updated 3 mins ago</p>-->
-            <a href="#" class="btn btn-primary float-right pos">Take offer</a>
-          </div>
-        </div>
-      </div>
+    <div class="card  text-black">
+      <img [src]="image.imageUrl" class="card-img" alt="..." style="height: 300px;">
+      <div class="card-img-overlay">
+        <h5 class="card-title size1">{{image.description}}</h5>
+        <!--<p class="card-text size2">{{image.details}}</p>-->
       </div>
     </div>
-
       
       
      
